// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic comment display 1`] = `
.emotion-0 {
  margin-top: 1em;
}

.emotion-1 {
  border-bottom: 1px solid var(--black);
}

.emotion-2 {
  text-align: center;
}

.emotion-3 {
  list-style-type: none;
  margin: 2em 0 0 0;
  padding: 0;
}

.emotion-4 {
  margin-top: 1em;
}

.emotion-4 p:last-of-type {
  margin-bottom: 0;
}

.emotion-5 {
  vertical-align: text-bottom;
}

.emotion-6 {
  font-size: 0.75em;
  background-color: var(--caption);
  color: white;
  border-radius: 5px;
  padding: 0.1em 0.2em;
}

.emotion-7 {
  font-style: italic;
}

<div
  class="emotion-0"
>
  <h4
    class="emotion-1"
  >
    Comments
  </h4>
  <div
    class="emotion-2"
  >
    <p>
      Sign in with google to leave a comment of your own:
    </p>
    <input
      alt="Sign in with Google"
      height="46"
      src="/googlesignin.png"
      type="image"
      width="191"
    />
  </div>
  <ul
    class="emotion-3"
  >
    <li>
      <div
        class="emotion-4"
      >
        <div>
          <span
            class="emotion-5"
          >
            <svg
              fill="rgb(25,42,230)"
              height="1em"
              shape-rendering="crispEdges"
              viewBox="0 0 5 5"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="rgba(140,140,140,0.2)"
                height="100%"
                width="100%"
              />
              <rect
                height="1"
                width="1"
                x="2"
                y="0"
              />
              <rect
                height="1"
                width="1"
                x="2"
                y="1"
              />
              <rect
                height="1"
                width="1"
                x="2"
                y="3"
              />
              <rect
                height="1"
                width="1"
                x="1"
                y="0"
              />
              <rect
                height="1"
                width="1"
                x="3"
                y="0"
              />
              <rect
                height="1"
                width="1"
                x="1"
                y="1"
              />
              <rect
                height="1"
                width="1"
                x="3"
                y="1"
              />
              <rect
                height="1"
                width="1"
                x="1"
                y="3"
              />
              <rect
                height="1"
                width="1"
                x="3"
                y="3"
              />
              <rect
                height="1"
                width="1"
                x="0"
                y="0"
              />
              <rect
                height="1"
                width="1"
                x="4"
                y="0"
              />
              <rect
                height="1"
                width="1"
                x="0"
                y="2"
              />
              <rect
                height="1"
                width="1"
                x="4"
                y="2"
              />
              <rect
                height="1"
                width="1"
                x="0"
                y="4"
              />
              <rect
                height="1"
                width="1"
                x="4"
                y="4"
              />
            </svg>
          </span>
          <i>
             
            Mike D
             
          </i>
          <span
            aria-label="Solved without helpers"
            role="img"
            title="Solved without helpers"
          >
            🤓
          </span>
          <span
            class="emotion-6"
          >
            55s
          </span>
           · 
          <span
            class="emotion-7"
            title="2020-08-01T07:00:00.000Z"
          >
            1 day ago
             
          </span>
        </div>
        <div>
          <div
            class="paragraph"
          >
            my first comment
          </div>
        </div>
        
        
      </div>
    </li>
  </ul>
</div>
`;

exports[`comment with username display 1`] = `
.emotion-0 {
  margin-top: 1em;
}

.emotion-1 {
  border-bottom: 1px solid var(--black);
}

.emotion-2 {
  text-align: center;
}

.emotion-3 {
  list-style-type: none;
  margin: 2em 0 0 0;
  padding: 0;
}

.emotion-4 {
  margin-top: 1em;
}

.emotion-4 p:last-of-type {
  margin-bottom: 0;
}

.emotion-5 {
  vertical-align: text-bottom;
}

.emotion-6 {
  font-size: 0.75em;
  background-color: var(--caption);
  color: white;
  border-radius: 5px;
  padding: 0.1em 0.2em;
}

.emotion-7 {
  font-style: italic;
}

<div
  class="emotion-0"
>
  <h4
    class="emotion-1"
  >
    Comments
  </h4>
  <div
    class="emotion-2"
  >
    <p>
      Sign in with google to leave a comment of your own:
    </p>
    <input
      alt="Sign in with Google"
      height="46"
      src="/googlesignin.png"
      type="image"
      width="191"
    />
  </div>
  <ul
    class="emotion-3"
  >
    <li>
      <div
        class="emotion-4"
      >
        <div>
          <span
            class="emotion-5"
          >
            <svg
              fill="rgb(25,42,230)"
              height="1em"
              shape-rendering="crispEdges"
              viewBox="0 0 5 5"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="rgba(140,140,140,0.2)"
                height="100%"
                width="100%"
              />
              <rect
                height="1"
                width="1"
                x="2"
                y="0"
              />
              <rect
                height="1"
                width="1"
                x="2"
                y="1"
              />
              <rect
                height="1"
                width="1"
                x="2"
                y="3"
              />
              <rect
                height="1"
                width="1"
                x="1"
                y="0"
              />
              <rect
                height="1"
                width="1"
                x="3"
                y="0"
              />
              <rect
                height="1"
                width="1"
                x="1"
                y="1"
              />
              <rect
                height="1"
                width="1"
                x="3"
                y="1"
              />
              <rect
                height="1"
                width="1"
                x="1"
                y="3"
              />
              <rect
                height="1"
                width="1"
                x="3"
                y="3"
              />
              <rect
                height="1"
                width="1"
                x="0"
                y="0"
              />
              <rect
                height="1"
                width="1"
                x="4"
                y="0"
              />
              <rect
                height="1"
                width="1"
                x="0"
                y="2"
              />
              <rect
                height="1"
                width="1"
                x="4"
                y="2"
              />
              <rect
                height="1"
                width="1"
                x="0"
                y="4"
              />
              <rect
                height="1"
                width="1"
                x="4"
                y="4"
              />
            </svg>
          </span>
          <i>
             
            <a
              href="/MikeD"
            >
              Mike D
            </a>
             
          </i>
          <span
            aria-label="Solved without helpers"
            role="img"
            title="Solved without helpers"
          >
            🤓
          </span>
          <span
            class="emotion-6"
          >
            55s
          </span>
           · 
          <span
            class="emotion-7"
            title="2020-08-01T07:00:00.000Z"
          >
            1 day ago
             
          </span>
        </div>
        <div>
          <div
            class="paragraph"
          >
            my first comment
          </div>
        </div>
        
        
      </div>
    </li>
  </ul>
</div>
`;
